Fixes image alignment issue

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -75,6 +75,11 @@ a {
       font-size: 1em;
     }
 
+    .profile {
+      display: flex;
+      align-items: center;
+    }
+
     img {
       max-width: 46px;
       border-radius: 50%;
